--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -5,7 +5,7 @@ vingette=fast
 ### Screens ###
 
 # The main screen
-screen=<empty> <empty> TEXTURE_PACK TEXTURE_PACK_RESOLUTION <empty> <empty> [Lighting] [Shadows] [Sky] [Details] [Effects]
+screen=<empty> <empty> TEXTURE_PACK TEXTURE_PACK_RESOLUTION <empty> <empty> [Lighting] [Shadows] [Reflections] [Sky] [Details] [Effects]
 
 # Sub-screens
 screen.Lighting=GLOBAL_ILLUMINATION <empty> RAYTRACED_LIGHT [RaytracedLightOptions]
@@ -13,6 +13,8 @@ screen.Lighting=GLOBAL_ILLUMINATION <empty> RAYTRACED_LIGHT [RaytracedLightOptio
 screen.RaytracedLightOptions=NUM_DIFFUSE_RAYS MAX_RAY_LENGTH RAY_STEP_LENGTH RAY_GROWTH DITHER_REFLECTION_RAYS
 
 screen.Shadows=shadowMapResolution <empty> HARD_SHADOWS SOFT_SHADOWS REALISTIC_SHADOWS HYBRID_RAYTRACED_SHADOWS PCF_SIZE_HALF BLOCKER_SEARCH_SIZE_HALF USE_RANDOM_ROTATION
+
+screen.Reflections=REFLECTION_RESOLUTION_MODIFIER NUM_RAYS
 
 screen.Sky=VOLUMETRIC_LIGHTING
 
