--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -10,7 +10,7 @@ screen=<empty> <empty> TEXTURE_PACK TEXTURE_PACK_RESOLUTION <empty> <empty> [Lig
 # Sub-screens
 screen.Lighting=GLOBAL_ILLUMINATION <empty> RAYTRACED_LIGHT [RaytracedLightOptions]
 
-screen.RaytracedLightOptions=NUM_DIFFUSE_RAYS MAX_RAY_LENGTH RAY_STEP_LENGTH RAY_GROWTH DITHER_REFLECTION_RAYS
+screen.RaytracedLightOptions=RAYTRACED_LIGHT NUM_DIFFUSE_RAYS MAX_RAY_LENGTH RAY_STEP_LENGTH RAY_GROWTH DITHER_REFLECTION_RAYS
 
 screen.Shadows=shadowMapResolution <empty> HARD_SHADOWS SOFT_SHADOWS REALISTIC_SHADOWS HYBRID_RAYTRACED_SHADOWS PCF_SIZE_HALF BLOCKER_SEARCH_SIZE_HALF USE_RANDOM_ROTATION
 
