Updated to be better

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -14,7 +14,7 @@ screen.RaytracedLightOptions=RAYTRACED_LIGHT NUM_DIFFUSE_RAYS MAX_RAY_LENGTH RAY
 
 screen.Shadows=shadowMapResolution <empty> HARD_SHADOWS SOFT_SHADOWS REALISTIC_SHADOWS HYBRID_RAYTRACED_SHADOWS PCF_SIZE_HALF BLOCKER_SEARCH_SIZE_HALF USE_RANDOM_ROTATION
 
-screen.Reflections=REFLECTION_RESOLUTION_MODIFIER NUM_RAYS
+screen.Reflections=NUM_RAYS
 
 screen.Sky=VOLUMETRIC_LIGHTING
 
