Cleaning up shader options

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -5,7 +5,7 @@ vingette=fast
 ### Screens ###
 
 # The main screen
-screen=<empty> <empty> TEXTURE_PACK TEXTURE_PACK_RESOLUTION <empty> <empty> [Lighting] [Shadows] [Reflections] [Sky] [Details] [Effects]
+screen=<empty> <empty> RESOURCE_PACK TEXTURE_PACK_RESOLUTION <empty> <empty> [Lighting] [Shadows] [Reflections] [Sky] [Details] [Effects]
 
 # Sub-screens
 screen.Lighting=GLOBAL_ILLUMINATION <empty> RAYTRACED_LIGHT [RaytracedLightOptions]
